# Lab2

Final_code/: Game.py  boolpalette.py  freesans20.py  game_menu.py  ili9341n.py  invaders.py  main.py  pong.py  snake.py  test.py  writer.py
Final_project/: Snake (1).py  main.py
Lab2/Animation_Demo/: CMakeLists.txt  animation.c
Lab3/PWM_Demo/: CMakeLists.txt  pwm-demo.c
